syntax = "proto3";

package com.inspirationparticle.utro.gen.offer.v1;

import "google/protobuf/timestamp.proto";

option java_package = "com.inspirationparticle.utro.gen.offer.v1";
option java_outer_classname = "OfferProto";

// Offer information
message Offer {
  string id = 1;
  string name_eng = 2;
  string name_pl = 3;
  string description_eng = 4;
  string description_pl = 5;
  string organisation_id = 6;
  string organisation_name = 7;
  string profile_image_mime_type = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
}

// Request/Response messages for Offer service
message GetOfferRequest {
  string id = 1;
}

message ListOffersRequest {
  optional string organisation_id = 1;
  int32 page_size = 2;
  int32 page_number = 3;
}

message ListOffersResponse {
  repeated Offer offers = 1;
  int32 total_count = 2;
  int32 page_size = 3;
  int32 page_number = 4;
}

message SearchOffersRequest {
  string query = 1;
  optional string organisation_id = 2;
  int32 page_size = 3;
  int32 page_number = 4;
}

message SearchOffersResponse {
  repeated Offer offers = 1;
  int32 total_count = 2;
  int32 page_size = 3;
  int32 page_number = 4;
}

message GetOfferProfileImageRequest {
  string id = 1;
}

message GetOfferProfileImageResponse {
  bytes image_data = 1;
  string mime_type = 2;
}

// CRUD Request/Response messages for Offer management
message CreateOfferRequest {
  string organisation_id = 1;
  string name_eng = 2;
  string name_pl = 3;
  string description_eng = 4;
  string description_pl = 5;
  bytes profile_image_data = 6;
  string profile_image_mime_type = 7;
}

message UpdateOfferRequest {
  string id = 1;
  optional string name_eng = 2;
  optional string name_pl = 3;
  optional string description_eng = 4;
  optional string description_pl = 5;
  optional bytes profile_image_data = 6;
  optional string profile_image_mime_type = 7;
}

message DeleteOfferRequest {
  string id = 1;
}

message DeleteOfferResponse {
  bool success = 1;
  string message = 2;
}

// Service definitions
service OfferService {
  rpc GetOffer(GetOfferRequest) returns (Offer);
  rpc ListOffers(ListOffersRequest) returns (ListOffersResponse);
  rpc SearchOffers(SearchOffersRequest) returns (SearchOffersResponse);
  rpc GetOfferProfileImage(GetOfferProfileImageRequest) returns (GetOfferProfileImageResponse);
  
  // CRUD operations for offer management (Owner role only)
  rpc CreateOffer(CreateOfferRequest) returns (Offer);
  rpc UpdateOffer(UpdateOfferRequest) returns (Offer);
  rpc DeleteOffer(DeleteOfferRequest) returns (DeleteOfferResponse);
}